Fix Button Spacing in landscapte

--- a/src/pages/LandingPage/LandingPage.css
+++ b/src/pages/LandingPage/LandingPage.css
@@ -75,7 +75,7 @@ button:hover{
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-around;
-    height: 440px;
+    height: 300px;
     align-items: center;
   }
 }
